# bis-scraper

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  check_code_quality.py  install.sh  pyproject.toml  run_tests.py
.github/workflows/: tests.yml
bis_scraper/: __init__.py  models.py
bis_scraper/cli/: __init__.py  main.py
bis_scraper/converters/: __init__.py  controller.py  pdf_converter.py
bis_scraper/scrapers/: __init__.py  bis_scraper.py  controller.py  recategorize.py
bis_scraper/utils/: constants.py  date_utils.py  file_utils.py  institution_utils.py
docs/: api.md  test_coverage.md
scripts/: README.md  analyze_results.sh  run_full_scrape.sh
temp/: cache_demo.py  cache_improvement_summary.md  progress_summary.md  project_plan.md  summary.md
tests/: conftest.py  test_cli.py
tests/integration/: test_workflow.py
tests/unit/: test_bis_scraper.py  test_date_cache.py  test_date_utils.py  test_file_utils.py  test_institution_utils.py  test_pdf_converter.py  test_recategorize.py
