[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bis_scraper"
version = "0.1.0"
authors = [
    {name = "Magnus Hansson", email = "hansson.carl.magnus@gmail.com"},
]
description = "A Python package to download and transform speeches from central banks globally"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4~=4.8.0",  # Required by textract
    "textract>=1.6.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.0.260",
    "responses>=0.22.0",
]

[project.urls]
"Homepage" = "https://github.com/HanssonMagnus/bis-scraper"
"Bug Tracker" = "https://github.com/HanssonMagnus/bis-scraper/issues"

[project.scripts]
bis-scraper = "bis_scraper.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["bis_scraper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
select = ["E", "F", "B", "I"]
line-length = 88
target-version = "py38" 